# termite

./: README.md  bundle.sh  meson.build
src/modules/voxel/: voxel.c
src/termite/: ant.c  bridge.c  bridge.h  control.c  defaults.c  food.c  grid.c  grid2d.c  levels.c  main.c  particle.c  renderer.c  scene.c  settings.c  ui.c  voxelutil.c
src/termite/gl/: renderer.c
src/zc_core/: zc_path.c
svg/: Icon.pxm
